fixed empty mean_temperature_per_year_df

--- a/climate_crop_study.ipynb
+++ b/climate_crop_study.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "id": "0c8eb651",
    "metadata": {
     "vscode": {
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "ccf96be7",
    "metadata": {},
    "outputs": [],
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 50,
    "id": "d0fb3445",
    "metadata": {},
    "outputs": [],
@@ -178,10 +178,11 @@
     "    \"STATE\": [38, 40],\n",
     "}\n",
     "STATION_DATA_COLUMN_MAPPING = {\n",
-    "    \"ID\": [0, 10],\n",
-    "    \"YEAR\": [11, 14],\n",
-    "    \"MONTH\": [15, 16],\n",
-    "    \"ELEMENT\": [17, 20],\n",
+    "    \"ID\": [0, 11],\n",
+    "    \"YEAR\": [11, 15],\n",
+    "    \"MONTH\": [15, 17],\n",
+    "    \"ELEMENT_TYPE\": [17, 21],\n",
+    "    \"ELEMENT\": [21, 26],\n",
     "}\n",
     "\n",
     "# For downloading data\n",
@@ -204,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 60,
    "id": "8a8700c5",
    "metadata": {},
    "outputs": [],
@@ -245,10 +246,16 @@
     "    for col_name, (start, end) in STATION_DATA_COLUMN_MAPPING.items():\n",
     "        df[col_name] = df[\"line\"].str[start:end].str.strip()\n",
     "    df = df[list(STATION_DATA_COLUMN_MAPPING.keys())]\n",
-    "    tmax_df = df[df[\"ELEMENT\"] == \"TMAX\"][[\"YEAR\", \"MONTH\", \"ID\", \"ELEMENT\"]].rename(columns={\"ELEMENT\": \"TMAX\"})\n",
-    "    tmin_df = df[df[\"ELEMENT\"] == \"TMIN\"][[\"YEAR\", \"MONTH\", \"ID\", \"ELEMENT\"]].rename(columns={\"ELEMENT\": \"TMIN\"})\n",
+    "\n",
+    "    tmax_df = df[df[\"ELEMENT_TYPE\"] == \"TMAX\"][[\"YEAR\", \"MONTH\", \"ID\", \"ELEMENT\"]].rename(columns={\"ELEMENT\": \"TMAX\"})\n",
+    "    tmax_df = tmax_df[tmax_df[\"TMAX\"] != '-9999']\n",
+    "\n",
+    "    tmin_df = df[df[\"ELEMENT_TYPE\"] == \"TMIN\"][[\"YEAR\", \"MONTH\", \"ID\", \"ELEMENT\"]].rename(columns={\"ELEMENT\": \"TMIN\"})\n",
+    "    tmin_df = tmin_df[tmin_df[\"TMIN\"] != '-9999']\n",
+    "\n",
     "    df = pd.merge(tmax_df, tmin_df, on=[\"YEAR\", \"MONTH\", \"ID\"], how=\"outer\")\n",
     "    df[\"TAVG\"] = (df[\"TMAX\"].astype(float) + df[\"TMIN\"].astype(float)) / 2\n",
+    "\n",
     "    return df\n",
     "\n",
     "def get_state_stations(state_code=STATE_CODE):\n",
@@ -309,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "id": "7e286919",
    "metadata": {},
    "outputs": [],
@@ -324,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "id": "87cbf9fc",
    "metadata": {},
    "outputs": [],
