added metadata and store merged data

--- a/climate_crop_study.ipynb
+++ b/climate_crop_study.ipynb
@@ -245,13 +245,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 158,
+   "id": "ce3646fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MERGED_OUTPUT_FILE = \"./data/merged/crop_yield_and_temperature.csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
    "id": "b11c608b",
    "metadata": {},
    "outputs": [],
    "source": [
     "def merge_crop_and_temp_data(crop_df, temp_df):\n",
     "    df = pd.merge(crop_df, temp_df, on=\"YEAR\", how=\"inner\")\n",
+    "    df.to_csv(MERGED_OUTPUT_FILE, index=False)\n",
     "    return df\n",
     "\n",
     "merged_df = merge_crop_and_temp_data(crop_data_df, mean_temperature_per_year_df)"
